5.5.0
[add] audio only to quality selection
[add] Age gate enforcement - Settings -> General
[fix/upd] use select dialog for subtitle settings
    - [add] Configure subtitles to Settings -> General
    - [add] Current language with No auto-generated subtitles option
[upd] language/translation paths * Isengard (15.x)+ required
[upd] youtube_resolver: allow resolve by url
[fix/upd] do not use distutils.version.LooseVersion for version compare [stefansaraev]
[fix/upd] add check to api key stripping
[fix/upd] subtitles default to non asr track when possible
[fix] /api/update route logging
[upd] Hebrew strings [Eng2Heb]
[upd] Polish strings [Etharr]

5.4.5
[fix] tighten regex for routing, resolving incorrect routing

5.4.4
[fix] overlapping regex causing no playlist videos

5.4.3
[add] mpeg-dash support for live content (requires inputstream.adaptive >= 2.0.12)
[add] add route to update api keys
    plugin://plugin.video.youtube/api/update/?enable=true&client_id=<client_id>&client_secret=<client_secret>&api_key=<api_key>
[fix/upd] refactor subtitles ** subtitles setting will be reset
[fix/upd] add My Subscriptions (Filtered) to dual login requirements
[fix/upd] only show Browse Channels when logged in
[upd] Greek strings [Twilight0]
[upd] Polish strings [Etharr]

5.4.2
[fix/upd] My Subscriptions

5.4.1
[fix/upd] dash working for vevo/etc
[upd] rework of auto subtitles
[fix] leia nightly login issues
[fix] 403 error on 'My Channel'/uploaded videos

5.4.0
[upd] Greek strings [Twilight0]
[upd] Polish strings [Etharr]
[upd] Finnish strings [teemue]
[upd] Spanish strings [roliverosc]
[fix/upd] resolve "Error Contents: 'q'" error [horstepipe]
[fix/upd] resolve Play All/Play from here not starting playback
[fix/upd] resolve playlists starting on second item
[fix/upd] allow dash in quality choices
[fix/upd] set content to files for menus, resolves mouse/scrolling
[fix/upd] fix cipher
[fix/upd] increase search history limit to 200
[fix/upd] storage db