@@ -12,6 +12,7 @@ DASH_SUPPORT_BUILTIN = 'kodion.video.support.mpd.builtin'  # (bool)
 DASH_SUPPORT_ADDON = 'kodion.video.support.mpd.addon'  # (bool)
 USE_DASH = 'kodion.video.quality.mpd'  # (bool)
 AGE_GATE = 'kodion.age.gate'  # (bool)
+OFFENSIVE_CONTENT = 'kodion.offensive.content'  # (bool)
 SUBTITLE_LANGUAGE = 'kodion.subtitle.languages.num'  # (int)
 SETUP_WIZARD = 'kodion.setup_wizard'  # (bool)
 
