@@ -22,6 +22,7 @@
         <setting label="30023" type="slider" id="kodion.search.size" default="10" range="0,10,200" option="int" />
         <setting id="kodion.safe.search" type="enum" label="30594" lvalues="30595|30561|30596" default="0" />
         <setting id="kodion.age.gate" type="bool" label="30603" default="true"/>
+        <setting id="kodion.offensive.content" type="bool" label="30604" default="false"/>
     </category>
 
     <category label="30516">
